// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders theme dark 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": .emotion-1 {
  grid-area: header;
  padding: 30px;
  border-bottom: 1px solid currentColor;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.emotion-1 > div {
  margin-top: 0;
}

.emotion-1 > div button {
  margin: 0 4px;
}

.emotion-0 {
  position: relative;
  cursor: pointer;
  outline: none;
  margin: 0;
  padding: 16px;
  width: auto;
  text-align: center;
  display: inline-block;
  border: none;
  border-radius: 5px;
  background: #3b5bdb;
  color: #ffffff;
  font-size: 1rem;
  font-family: "IBM Plex Sans",Arial,Helvetica,sans-serif;
  line-height: inherit;
  font-weight: inherit;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
  -webkit-transition: 0.2s ease-in-out;
  transition: 0.2s ease-in-out;
  padding: 4px 8px;
  font-size: 0.875rempx;
  background: #3b5bdb;
  color: #ffffff;
}

.emotion-0:hover {
  background: #0054ff;
  -webkit-transform: translate3d(0,-3px,0);
  -ms-transform: translate3d(0,-3px,0);
  transform: translate3d(0,-3px,0);
  box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);
}

.emotion-0:active {
  background: #0032a8;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
  box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);
}

.emotion-0:focus {
  box-shadow: 0 0px 8px #0054ff,0 0px 8px #b0b7ff;
}

.emotion-0:hover {
  color: #ffffff;
  background: #0054ff;
}

.emotion-12 {
  grid-area: buttons;
  padding: 30px;
  border-bottom: 1px solid currentColor;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: space-evenly;
  -webkit-justify-content: space-evenly;
  -ms-flex-pack: space-evenly;
  justify-content: space-evenly;
}

.emotion-12 > button {
  -webkit-flex: 0 1 calc(50% - 20px);
  -ms-flex: 0 1 calc(50% - 20px);
  flex: 0 1 calc(50% - 20px);
  margin-top: 20px;
}

.emotion-13 {
  display: grid;
  grid-template-columns: 1fr 3fr 1fr;
  grid-template-rows: auto 1fr 1fr;
  grid-template-areas: 'header header header' '. buttons .' '. . .';
  background: #212529;
  color: #ffffff;
  width: 100%;
  height: 100%;
  -webkit-transition: 0.2s ease;
  transition: 0.2s ease;
}

.emotion-13 section {
  position: relative;
}

.emotion-13 h2 {
  position: absolute;
  top: 0px;
  left: 0;
  text-transform: uppercase;
}

.emotion-2 {
  position: relative;
  cursor: pointer;
  outline: none;
  margin: 0;
  padding: 16px;
  width: auto;
  text-align: center;
  display: inline-block;
  border: none;
  border-radius: 5px;
  background: #b0b7ff;
  color: #212529;
  font-size: 1rem;
  font-family: "IBM Plex Sans",Arial,Helvetica,sans-serif;
  line-height: inherit;
  font-weight: inherit;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
  -webkit-transition: 0.2s ease-in-out;
  transition: 0.2s ease-in-out;
  background: #b0b7ff;
  color: #212529;
}

.emotion-2:hover {
  background: #37b0ff;
  -webkit-transform: translate3d(0,-3px,0);
  -ms-transform: translate3d(0,-3px,0);
  transform: translate3d(0,-3px,0);
  box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);
}

.emotion-2:active {
  background: #b0b7ff;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
  box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);
}

.emotion-2:focus {
  box-shadow: 0 0px 8px #37b0ff,0 0px 8px #0032a8;
}

.emotion-2:hover {
  color: #212529;
  background: #37b0ff;
}

.emotion-3 {
  position: relative;
  cursor: pointer;
  outline: none;
  margin: 0;
  padding: 16px;
  width: auto;
  text-align: center;
  display: inline-block;
  border: none;
  border-radius: 5px;
  background: #b0b7ff;
  color: #212529;
  font-size: 1rem;
  font-family: "IBM Plex Sans",Arial,Helvetica,sans-serif;
  line-height: inherit;
  font-weight: inherit;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
  -webkit-transition: 0.2s ease-in-out;
  transition: 0.2s ease-in-out;
  background: #ff91b8;
  color: #212529;
}

.emotion-3:hover {
  background: #37b0ff;
  -webkit-transform: translate3d(0,-3px,0);
  -ms-transform: translate3d(0,-3px,0);
  transform: translate3d(0,-3px,0);
  box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);
}

.emotion-3:active {
  background: #b0b7ff;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
  box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);
}

.emotion-3:focus {
  box-shadow: 0 0px 8px #37b0ff,0 0px 8px #0032a8;
}

.emotion-3:hover {
  color: #212529;
  background: #ff00c2;
}

.emotion-4 {
  position: relative;
  cursor: pointer;
  outline: none;
  margin: 0;
  padding: 16px;
  width: auto;
  text-align: center;
  display: inline-block;
  border: none;
  border-radius: 5px;
  background: #b0b7ff;
  color: #212529;
  font-size: 1rem;
  font-family: "IBM Plex Sans",Arial,Helvetica,sans-serif;
  line-height: inherit;
  font-weight: inherit;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
  -webkit-transition: 0.2s ease-in-out;
  transition: 0.2s ease-in-out;
  background: #7feab5;
  color: #212529;
}

.emotion-4:hover {
  background: #37b0ff;
  -webkit-transform: translate3d(0,-3px,0);
  -ms-transform: translate3d(0,-3px,0);
  transform: translate3d(0,-3px,0);
  box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);
}

.emotion-4:active {
  background: #b0b7ff;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
  box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);
}

.emotion-4:focus {
  box-shadow: 0 0px 8px #37b0ff,0 0px 8px #0032a8;
}

.emotion-4:hover {
  color: #212529;
  background: #00ff80;
}

.emotion-5 {
  position: relative;
  cursor: pointer;
  outline: none;
  margin: 0;
  padding: 16px;
  width: auto;
  text-align: center;
  display: inline-block;
  border: none;
  border-radius: 5px;
  background: #b0b7ff;
  color: #212529;
  font-size: 1rem;
  font-family: "IBM Plex Sans",Arial,Helvetica,sans-serif;
  line-height: inherit;
  font-weight: inherit;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
  -webkit-transition: 0.2s ease-in-out;
  transition: 0.2s ease-in-out;
  background: #ff9c61;
  color: #212529;
}

.emotion-5:hover {
  background: #37b0ff;
  -webkit-transform: translate3d(0,-3px,0);
  -ms-transform: translate3d(0,-3px,0);
  transform: translate3d(0,-3px,0);
  box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);
}

.emotion-5:active {
  background: #b0b7ff;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
  box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);
}

.emotion-5:focus {
  box-shadow: 0 0px 8px #37b0ff,0 0px 8px #0032a8;
}

.emotion-5:hover {
  color: #212529;
  background: #ff6c00;
}

.emotion-6 {
  position: relative;
  cursor: pointer;
  outline: none;
  margin: 0;
  padding: 16px;
  width: auto;
  text-align: center;
  display: inline-block;
  border: none;
  border-radius: 5px;
  background: #b0b7ff;
  color: #212529;
  font-size: 1rem;
  font-family: "IBM Plex Sans",Arial,Helvetica,sans-serif;
  line-height: inherit;
  font-weight: inherit;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
  -webkit-transition: 0.2s ease-in-out;
  transition: 0.2s ease-in-out;
  background: #ff9d89;
  color: #212529;
}

.emotion-6:hover {
  background: #37b0ff;
  -webkit-transform: translate3d(0,-3px,0);
  -ms-transform: translate3d(0,-3px,0);
  transform: translate3d(0,-3px,0);
  box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);
}

.emotion-6:active {
  background: #b0b7ff;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
  box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);
}

.emotion-6:focus {
  box-shadow: 0 0px 8px #37b0ff,0 0px 8px #0032a8;
}

.emotion-6:hover {
  color: #212529;
  background: #ff493b;
}

.emotion-7 {
  position: relative;
  cursor: pointer;
  outline: none;
  margin: 0;
  padding: 16px;
  width: auto;
  text-align: center;
  display: inline-block;
  border: none;
  border-radius: 5px;
  background: #b0b7ff;
  color: #212529;
  font-size: 1rem;
  font-family: "IBM Plex Sans",Arial,Helvetica,sans-serif;
  line-height: inherit;
  font-weight: inherit;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
  -webkit-transition: 0.2s ease-in-out;
  transition: 0.2s ease-in-out;
  background: #82d9ef;
  color: #212529;
}

.emotion-7:hover {
  background: #37b0ff;
  -webkit-transform: translate3d(0,-3px,0);
  -ms-transform: translate3d(0,-3px,0);
  transform: translate3d(0,-3px,0);
  box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);
}

.emotion-7:active {
  background: #b0b7ff;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
  box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);
}

.emotion-7:focus {
  box-shadow: 0 0px 8px #37b0ff,0 0px 8px #0032a8;
}

.emotion-7:hover {
  color: #212529;
  background: #00f3ff;
}

.emotion-8 {
  position: relative;
  cursor: pointer;
  outline: none;
  margin: 0;
  padding: 16px;
  width: auto;
  text-align: center;
  display: inline-block;
  border: none;
  border-radius: 5px;
  background: #b0b7ff;
  color: #212529;
  font-size: 1rem;
  font-family: "IBM Plex Sans",Arial,Helvetica,sans-serif;
  line-height: inherit;
  font-weight: inherit;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
  -webkit-transition: 0.2s ease-in-out;
  transition: 0.2s ease-in-out;
  background: #515458;
  color: #ffffff;
}

.emotion-8:hover {
  background: #37b0ff;
  -webkit-transform: translate3d(0,-3px,0);
  -ms-transform: translate3d(0,-3px,0);
  transform: translate3d(0,-3px,0);
  box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);
}

.emotion-8:active {
  background: #b0b7ff;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
  box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);
}

.emotion-8:focus {
  box-shadow: 0 0px 8px #37b0ff,0 0px 8px #0032a8;
}

.emotion-8:hover {
  color: #515458;
  background: #a3abb3;
}

.emotion-9 {
  position: relative;
  cursor: pointer;
  outline: none;
  margin: 0;
  padding: 16px;
  width: auto;
  text-align: center;
  display: inline-block;
  border: none;
  border-radius: 5px;
  background: #b0b7ff;
  color: #212529;
  font-size: 1rem;
  font-family: "IBM Plex Sans",Arial,Helvetica,sans-serif;
  line-height: inherit;
  font-weight: inherit;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
  -webkit-transition: 0.2s ease-in-out;
  transition: 0.2s ease-in-out;
  padding: 8px;
  background: #b0b7ff;
  color: #212529;
}

.emotion-9:hover {
  background: #37b0ff;
  -webkit-transform: translate3d(0,-3px,0);
  -ms-transform: translate3d(0,-3px,0);
  transform: translate3d(0,-3px,0);
  box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);
}

.emotion-9:active {
  background: #b0b7ff;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
  box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);
}

.emotion-9:focus {
  box-shadow: 0 0px 8px #37b0ff,0 0px 8px #0032a8;
}

.emotion-9:hover {
  color: #212529;
  background: #37b0ff;
}

.emotion-10 {
  position: relative;
  cursor: pointer;
  outline: none;
  margin: 0;
  padding: 16px;
  width: auto;
  text-align: center;
  display: inline-block;
  border: none;
  border-radius: 5px;
  background: #b0b7ff;
  color: #212529;
  font-size: 1rem;
  font-family: "IBM Plex Sans",Arial,Helvetica,sans-serif;
  line-height: inherit;
  font-weight: inherit;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
  -webkit-transition: 0.2s ease-in-out;
  transition: 0.2s ease-in-out;
  padding: 4px 8px;
  font-size: 0.875rempx;
  background: #b0b7ff;
  color: #212529;
}

.emotion-10:hover {
  background: #37b0ff;
  -webkit-transform: translate3d(0,-3px,0);
  -ms-transform: translate3d(0,-3px,0);
  transform: translate3d(0,-3px,0);
  box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);
}

.emotion-10:active {
  background: #b0b7ff;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
  box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);
}

.emotion-10:focus {
  box-shadow: 0 0px 8px #37b0ff,0 0px 8px #0032a8;
}

.emotion-10:hover {
  color: #212529;
  background: #37b0ff;
}

.emotion-11 {
  position: relative;
  cursor: pointer;
  outline: none;
  margin: 0;
  padding: 16px;
  width: auto;
  text-align: center;
  display: inline-block;
  border: none;
  border-radius: 5px;
  background: cyan;
  color: #212529;
  font-size: 1rem;
  font-family: "IBM Plex Sans",Arial,Helvetica,sans-serif;
  line-height: inherit;
  font-weight: inherit;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
  -webkit-transition: 0.2s ease-in-out;
  transition: 0.2s ease-in-out;
  background: cyan;
  color: #212529;
}

.emotion-11:hover {
  background: #37b0ff;
  -webkit-transform: translate3d(0,-3px,0);
  -ms-transform: translate3d(0,-3px,0);
  transform: translate3d(0,-3px,0);
  box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);
}

.emotion-11:active {
  background: #b0b7ff;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
  box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);
}

.emotion-11:focus {
  box-shadow: 0 0px 8px #37b0ff,0 0px 8px #0032a8;
}

.emotion-11:hover {
  color: #212529;
  background: #37b0ff;
}

.emotion-11:hover,
.emotion-11:focus {
  background: #ff9c61;
}

.emotion-11:active {
  background: #fd9d91;
}

<body>
    <div>
      <div
        class="emotion-13"
      >
        <div
          class="emotion-1"
        >
          <button
            class="emotion-0"
            data-testid=""
            id=""
            type="button"
          >
            <span>
              Show 
              light
               mode
            </span>
          </button>
        </div>
        <section
          class="emotion-12"
        >
          <button
            class="emotion-2"
            data-testid=""
            id=""
            type="button"
          >
            <span>
              Default Button
            </span>
          </button>
          <button
            class="emotion-3"
            data-testid=""
            id=""
            type="button"
          >
            <span>
              Secondary Button
            </span>
          </button>
          <button
            class="emotion-4"
            data-testid=""
            id=""
            type="button"
          >
            <span>
              Accent1 Button
            </span>
          </button>
          <button
            class="emotion-5"
            data-testid=""
            id=""
            type="button"
          >
            <span>
              Accent2 Button
            </span>
          </button>
          <button
            class="emotion-6"
            data-testid=""
            id=""
            type="button"
          >
            <span>
              Accent3 Button
            </span>
          </button>
          <button
            class="emotion-7"
            data-testid=""
            id=""
            type="button"
          >
            <span>
              Accent4 Button
            </span>
          </button>
          <button
            class="emotion-8"
            data-testid=""
            id=""
            type="button"
          >
            <span>
              Gray Button
            </span>
          </button>
          <button
            class="emotion-9"
            data-testid=""
            id=""
            type="button"
          >
            <span>
              Medium Button
            </span>
          </button>
          <button
            class="emotion-10"
            data-testid=""
            id=""
            type="button"
          >
            <span>
              Small Button
            </span>
          </button>
          <button
            class="emotion-11"
            data-testid=""
            id=""
            type="button"
          >
            <span>
              Custom theme button
            </span>
          </button>
        </section>
      </div>
    </div>
  </body>,
  "container": .emotion-1 {
  grid-area: header;
  padding: 30px;
  border-bottom: 1px solid currentColor;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.emotion-1 > div {
  margin-top: 0;
}

.emotion-1 > div button {
  margin: 0 4px;
}

.emotion-0 {
  position: relative;
  cursor: pointer;
  outline: none;
  margin: 0;
  padding: 16px;
  width: auto;
  text-align: center;
  display: inline-block;
  border: none;
  border-radius: 5px;
  background: #3b5bdb;
  color: #ffffff;
  font-size: 1rem;
  font-family: "IBM Plex Sans",Arial,Helvetica,sans-serif;
  line-height: inherit;
  font-weight: inherit;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
  -webkit-transition: 0.2s ease-in-out;
  transition: 0.2s ease-in-out;
  padding: 4px 8px;
  font-size: 0.875rempx;
  background: #3b5bdb;
  color: #ffffff;
}

.emotion-0:hover {
  background: #0054ff;
  -webkit-transform: translate3d(0,-3px,0);
  -ms-transform: translate3d(0,-3px,0);
  transform: translate3d(0,-3px,0);
  box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);
}

.emotion-0:active {
  background: #0032a8;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
  box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);
}

.emotion-0:focus {
  box-shadow: 0 0px 8px #0054ff,0 0px 8px #b0b7ff;
}

.emotion-0:hover {
  color: #ffffff;
  background: #0054ff;
}

.emotion-12 {
  grid-area: buttons;
  padding: 30px;
  border-bottom: 1px solid currentColor;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: space-evenly;
  -webkit-justify-content: space-evenly;
  -ms-flex-pack: space-evenly;
  justify-content: space-evenly;
}

.emotion-12 > button {
  -webkit-flex: 0 1 calc(50% - 20px);
  -ms-flex: 0 1 calc(50% - 20px);
  flex: 0 1 calc(50% - 20px);
  margin-top: 20px;
}

.emotion-13 {
  display: grid;
  grid-template-columns: 1fr 3fr 1fr;
  grid-template-rows: auto 1fr 1fr;
  grid-template-areas: 'header header header' '. buttons .' '. . .';
  background: #212529;
  color: #ffffff;
  width: 100%;
  height: 100%;
  -webkit-transition: 0.2s ease;
  transition: 0.2s ease;
}

.emotion-13 section {
  position: relative;
}

.emotion-13 h2 {
  position: absolute;
  top: 0px;
  left: 0;
  text-transform: uppercase;
}

.emotion-2 {
  position: relative;
  cursor: pointer;
  outline: none;
  margin: 0;
  padding: 16px;
  width: auto;
  text-align: center;
  display: inline-block;
  border: none;
  border-radius: 5px;
  background: #b0b7ff;
  color: #212529;
  font-size: 1rem;
  font-family: "IBM Plex Sans",Arial,Helvetica,sans-serif;
  line-height: inherit;
  font-weight: inherit;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
  -webkit-transition: 0.2s ease-in-out;
  transition: 0.2s ease-in-out;
  background: #b0b7ff;
  color: #212529;
}

.emotion-2:hover {
  background: #37b0ff;
  -webkit-transform: translate3d(0,-3px,0);
  -ms-transform: translate3d(0,-3px,0);
  transform: translate3d(0,-3px,0);
  box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);
}

.emotion-2:active {
  background: #b0b7ff;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
  box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);
}

.emotion-2:focus {
  box-shadow: 0 0px 8px #37b0ff,0 0px 8px #0032a8;
}

.emotion-2:hover {
  color: #212529;
  background: #37b0ff;
}

.emotion-3 {
  position: relative;
  cursor: pointer;
  outline: none;
  margin: 0;
  padding: 16px;
  width: auto;
  text-align: center;
  display: inline-block;
  border: none;
  border-radius: 5px;
  background: #b0b7ff;
  color: #212529;
  font-size: 1rem;
  font-family: "IBM Plex Sans",Arial,Helvetica,sans-serif;
  line-height: inherit;
  font-weight: inherit;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
  -webkit-transition: 0.2s ease-in-out;
  transition: 0.2s ease-in-out;
  background: #ff91b8;
  color: #212529;
}

.emotion-3:hover {
  background: #37b0ff;
  -webkit-transform: translate3d(0,-3px,0);
  -ms-transform: translate3d(0,-3px,0);
  transform: translate3d(0,-3px,0);
  box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);
}

.emotion-3:active {
  background: #b0b7ff;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
  box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);
}

.emotion-3:focus {
  box-shadow: 0 0px 8px #37b0ff,0 0px 8px #0032a8;
}

.emotion-3:hover {
  color: #212529;
  background: #ff00c2;
}

.emotion-4 {
  position: relative;
  cursor: pointer;
  outline: none;
  margin: 0;
  padding: 16px;
  width: auto;
  text-align: center;
  display: inline-block;
  border: none;
  border-radius: 5px;
  background: #b0b7ff;
  color: #212529;
  font-size: 1rem;
  font-family: "IBM Plex Sans",Arial,Helvetica,sans-serif;
  line-height: inherit;
  font-weight: inherit;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
  -webkit-transition: 0.2s ease-in-out;
  transition: 0.2s ease-in-out;
  background: #7feab5;
  color: #212529;
}

.emotion-4:hover {
  background: #37b0ff;
  -webkit-transform: translate3d(0,-3px,0);
  -ms-transform: translate3d(0,-3px,0);
  transform: translate3d(0,-3px,0);
  box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);
}

.emotion-4:active {
  background: #b0b7ff;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
  box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);
}

.emotion-4:focus {
  box-shadow: 0 0px 8px #37b0ff,0 0px 8px #0032a8;
}

.emotion-4:hover {
  color: #212529;
  background: #00ff80;
}

.emotion-5 {
  position: relative;
  cursor: pointer;
  outline: none;
  margin: 0;
  padding: 16px;
  width: auto;
  text-align: center;
  display: inline-block;
  border: none;
  border-radius: 5px;
  background: #b0b7ff;
  color: #212529;
  font-size: 1rem;
  font-family: "IBM Plex Sans",Arial,Helvetica,sans-serif;
  line-height: inherit;
  font-weight: inherit;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
  -webkit-transition: 0.2s ease-in-out;
  transition: 0.2s ease-in-out;
  background: #ff9c61;
  color: #212529;
}

.emotion-5:hover {
  background: #37b0ff;
  -webkit-transform: translate3d(0,-3px,0);
  -ms-transform: translate3d(0,-3px,0);
  transform: translate3d(0,-3px,0);
  box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);
}

.emotion-5:active {
  background: #b0b7ff;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
  box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);
}

.emotion-5:focus {
  box-shadow: 0 0px 8px #37b0ff,0 0px 8px #0032a8;
}

.emotion-5:hover {
  color: #212529;
  background: #ff6c00;
}

.emotion-6 {
  position: relative;
  cursor: pointer;
  outline: none;
  margin: 0;
  padding: 16px;
  width: auto;
  text-align: center;
  display: inline-block;
  border: none;
  border-radius: 5px;
  background: #b0b7ff;
  color: #212529;
  font-size: 1rem;
  font-family: "IBM Plex Sans",Arial,Helvetica,sans-serif;
  line-height: inherit;
  font-weight: inherit;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
  -webkit-transition: 0.2s ease-in-out;
  transition: 0.2s ease-in-out;
  background: #ff9d89;
  color: #212529;
}

.emotion-6:hover {
  background: #37b0ff;
  -webkit-transform: translate3d(0,-3px,0);
  -ms-transform: translate3d(0,-3px,0);
  transform: translate3d(0,-3px,0);
  box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);
}

.emotion-6:active {
  background: #b0b7ff;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
  box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);
}

.emotion-6:focus {
  box-shadow: 0 0px 8px #37b0ff,0 0px 8px #0032a8;
}

.emotion-6:hover {
  color: #212529;
  background: #ff493b;
}

.emotion-7 {
  position: relative;
  cursor: pointer;
  outline: none;
  margin: 0;
  padding: 16px;
  width: auto;
  text-align: center;
  display: inline-block;
  border: none;
  border-radius: 5px;
  background: #b0b7ff;
  color: #212529;
  font-size: 1rem;
  font-family: "IBM Plex Sans",Arial,Helvetica,sans-serif;
  line-height: inherit;
  font-weight: inherit;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
  -webkit-transition: 0.2s ease-in-out;
  transition: 0.2s ease-in-out;
  background: #82d9ef;
  color: #212529;
}

.emotion-7:hover {
  background: #37b0ff;
  -webkit-transform: translate3d(0,-3px,0);
  -ms-transform: translate3d(0,-3px,0);
  transform: translate3d(0,-3px,0);
  box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);
}

.emotion-7:active {
  background: #b0b7ff;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
  box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);
}

.emotion-7:focus {
  box-shadow: 0 0px 8px #37b0ff,0 0px 8px #0032a8;
}

.emotion-7:hover {
  color: #212529;
  background: #00f3ff;
}

.emotion-8 {
  position: relative;
  cursor: pointer;
  outline: none;
  margin: 0;
  padding: 16px;
  width: auto;
  text-align: center;
  display: inline-block;
  border: none;
  border-radius: 5px;
  background: #b0b7ff;
  color: #212529;
  font-size: 1rem;
  font-family: "IBM Plex Sans",Arial,Helvetica,sans-serif;
  line-height: inherit;
  font-weight: inherit;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
  -webkit-transition: 0.2s ease-in-out;
  transition: 0.2s ease-in-out;
  background: #515458;
  color: #ffffff;
}

.emotion-8:hover {
  background: #37b0ff;
  -webkit-transform: translate3d(0,-3px,0);
  -ms-transform: translate3d(0,-3px,0);
  transform: translate3d(0,-3px,0);
  box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);
}

.emotion-8:active {
  background: #b0b7ff;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
  box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);
}

.emotion-8:focus {
  box-shadow: 0 0px 8px #37b0ff,0 0px 8px #0032a8;
}

.emotion-8:hover {
  color: #515458;
  background: #a3abb3;
}

.emotion-9 {
  position: relative;
  cursor: pointer;
  outline: none;
  margin: 0;
  padding: 16px;
  width: auto;
  text-align: center;
  display: inline-block;
  border: none;
  border-radius: 5px;
  background: #b0b7ff;
  color: #212529;
  font-size: 1rem;
  font-family: "IBM Plex Sans",Arial,Helvetica,sans-serif;
  line-height: inherit;
  font-weight: inherit;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
  -webkit-transition: 0.2s ease-in-out;
  transition: 0.2s ease-in-out;
  padding: 8px;
  background: #b0b7ff;
  color: #212529;
}

.emotion-9:hover {
  background: #37b0ff;
  -webkit-transform: translate3d(0,-3px,0);
  -ms-transform: translate3d(0,-3px,0);
  transform: translate3d(0,-3px,0);
  box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);
}

.emotion-9:active {
  background: #b0b7ff;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
  box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);
}

.emotion-9:focus {
  box-shadow: 0 0px 8px #37b0ff,0 0px 8px #0032a8;
}

.emotion-9:hover {
  color: #212529;
  background: #37b0ff;
}

.emotion-10 {
  position: relative;
  cursor: pointer;
  outline: none;
  margin: 0;
  padding: 16px;
  width: auto;
  text-align: center;
  display: inline-block;
  border: none;
  border-radius: 5px;
  background: #b0b7ff;
  color: #212529;
  font-size: 1rem;
  font-family: "IBM Plex Sans",Arial,Helvetica,sans-serif;
  line-height: inherit;
  font-weight: inherit;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
  -webkit-transition: 0.2s ease-in-out;
  transition: 0.2s ease-in-out;
  padding: 4px 8px;
  font-size: 0.875rempx;
  background: #b0b7ff;
  color: #212529;
}

.emotion-10:hover {
  background: #37b0ff;
  -webkit-transform: translate3d(0,-3px,0);
  -ms-transform: translate3d(0,-3px,0);
  transform: translate3d(0,-3px,0);
  box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);
}

.emotion-10:active {
  background: #b0b7ff;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
  box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);
}

.emotion-10:focus {
  box-shadow: 0 0px 8px #37b0ff,0 0px 8px #0032a8;
}

.emotion-10:hover {
  color: #212529;
  background: #37b0ff;
}

.emotion-11 {
  position: relative;
  cursor: pointer;
  outline: none;
  margin: 0;
  padding: 16px;
  width: auto;
  text-align: center;
  display: inline-block;
  border: none;
  border-radius: 5px;
  background: cyan;
  color: #212529;
  font-size: 1rem;
  font-family: "IBM Plex Sans",Arial,Helvetica,sans-serif;
  line-height: inherit;
  font-weight: inherit;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
  -webkit-transition: 0.2s ease-in-out;
  transition: 0.2s ease-in-out;
  background: cyan;
  color: #212529;
}

.emotion-11:hover {
  background: #37b0ff;
  -webkit-transform: translate3d(0,-3px,0);
  -ms-transform: translate3d(0,-3px,0);
  transform: translate3d(0,-3px,0);
  box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);
}

.emotion-11:active {
  background: #b0b7ff;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
  box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);
}

.emotion-11:focus {
  box-shadow: 0 0px 8px #37b0ff,0 0px 8px #0032a8;
}

.emotion-11:hover {
  color: #212529;
  background: #37b0ff;
}

.emotion-11:hover,
.emotion-11:focus {
  background: #ff9c61;
}

.emotion-11:active {
  background: #fd9d91;
}

<div>
    <div
      class="emotion-13"
    >
      <div
        class="emotion-1"
      >
        <button
          class="emotion-0"
          data-testid=""
          id=""
          type="button"
        >
          <span>
            Show 
            light
             mode
          </span>
        </button>
      </div>
      <section
        class="emotion-12"
      >
        <button
          class="emotion-2"
          data-testid=""
          id=""
          type="button"
        >
          <span>
            Default Button
          </span>
        </button>
        <button
          class="emotion-3"
          data-testid=""
          id=""
          type="button"
        >
          <span>
            Secondary Button
          </span>
        </button>
        <button
          class="emotion-4"
          data-testid=""
          id=""
          type="button"
        >
          <span>
            Accent1 Button
          </span>
        </button>
        <button
          class="emotion-5"
          data-testid=""
          id=""
          type="button"
        >
          <span>
            Accent2 Button
          </span>
        </button>
        <button
          class="emotion-6"
          data-testid=""
          id=""
          type="button"
        >
          <span>
            Accent3 Button
          </span>
        </button>
        <button
          class="emotion-7"
          data-testid=""
          id=""
          type="button"
        >
          <span>
            Accent4 Button
          </span>
        </button>
        <button
          class="emotion-8"
          data-testid=""
          id=""
          type="button"
        >
          <span>
            Gray Button
          </span>
        </button>
        <button
          class="emotion-9"
          data-testid=""
          id=""
          type="button"
        >
          <span>
            Medium Button
          </span>
        </button>
        <button
          class="emotion-10"
          data-testid=""
          id=""
          type="button"
        >
          <span>
            Small Button
          </span>
        </button>
        <button
          class="emotion-11"
          data-testid=""
          id=""
          type="button"
        >
          <span>
            Custom theme button
          </span>
        </button>
      </section>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`renders theme light 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": .emotion-13 {
  display: grid;
  grid-template-columns: 1fr 3fr 1fr;
  grid-template-rows: auto 1fr 1fr;
  grid-template-areas: 'header header header' '. buttons .' '. . .';
  background: #ffffff;
  color: #212529;
  width: 100%;
  height: 100%;
  -webkit-transition: 0.2s ease;
  transition: 0.2s ease;
}

.emotion-13 section {
  position: relative;
}

.emotion-13 h2 {
  position: absolute;
  top: 0px;
  left: 0;
  text-transform: uppercase;
}

.emotion-1 {
  grid-area: header;
  padding: 30px;
  border-bottom: 1px solid currentColor;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.emotion-1 > div {
  margin-top: 0;
}

.emotion-1 > div button {
  margin: 0 4px;
}

.emotion-0 {
  position: relative;
  cursor: pointer;
  outline: none;
  margin: 0;
  padding: 16px;
  width: auto;
  text-align: center;
  display: inline-block;
  border: none;
  border-radius: 5px;
  background: #3b5bdb;
  color: #ffffff;
  font-size: 1rem;
  font-family: "IBM Plex Sans",Arial,Helvetica,sans-serif;
  line-height: inherit;
  font-weight: inherit;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
  -webkit-transition: 0.2s ease-in-out;
  transition: 0.2s ease-in-out;
  padding: 4px 8px;
  font-size: 0.875rempx;
  background: #3b5bdb;
  color: #ffffff;
}

.emotion-0:hover {
  background: #0054ff;
  -webkit-transform: translate3d(0,-3px,0);
  -ms-transform: translate3d(0,-3px,0);
  transform: translate3d(0,-3px,0);
  box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);
}

.emotion-0:active {
  background: #0032a8;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
  box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);
}

.emotion-0:focus {
  box-shadow: 0 0px 8px #0054ff,0 0px 8px #b0b7ff;
}

.emotion-0:hover {
  color: #ffffff;
  background: #0054ff;
}

.emotion-12 {
  grid-area: buttons;
  padding: 30px;
  border-bottom: 1px solid currentColor;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: space-evenly;
  -webkit-justify-content: space-evenly;
  -ms-flex-pack: space-evenly;
  justify-content: space-evenly;
}

.emotion-12 > button {
  -webkit-flex: 0 1 calc(50% - 20px);
  -ms-flex: 0 1 calc(50% - 20px);
  flex: 0 1 calc(50% - 20px);
  margin-top: 20px;
}

.emotion-2 {
  position: relative;
  cursor: pointer;
  outline: none;
  margin: 0;
  padding: 16px;
  width: auto;
  text-align: center;
  display: inline-block;
  border: none;
  border-radius: 5px;
  background: #3b5bdb;
  color: #ffffff;
  font-size: 1rem;
  font-family: "IBM Plex Sans",Arial,Helvetica,sans-serif;
  line-height: inherit;
  font-weight: inherit;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
  -webkit-transition: 0.2s ease-in-out;
  transition: 0.2s ease-in-out;
  background: #3b5bdb;
  color: #ffffff;
}

.emotion-2:hover {
  background: #0054ff;
  -webkit-transform: translate3d(0,-3px,0);
  -ms-transform: translate3d(0,-3px,0);
  transform: translate3d(0,-3px,0);
  box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);
}

.emotion-2:active {
  background: #0032a8;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
  box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);
}

.emotion-2:focus {
  box-shadow: 0 0px 8px #0054ff,0 0px 8px #b0b7ff;
}

.emotion-2:hover {
  color: #ffffff;
  background: #0054ff;
}

.emotion-3 {
  position: relative;
  cursor: pointer;
  outline: none;
  margin: 0;
  padding: 16px;
  width: auto;
  text-align: center;
  display: inline-block;
  border: none;
  border-radius: 5px;
  background: #3b5bdb;
  color: #ffffff;
  font-size: 1rem;
  font-family: "IBM Plex Sans",Arial,Helvetica,sans-serif;
  line-height: inherit;
  font-weight: inherit;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
  -webkit-transition: 0.2s ease-in-out;
  transition: 0.2s ease-in-out;
  background: #C2255C;
  color: #ffffff;
}

.emotion-3:hover {
  background: #0054ff;
  -webkit-transform: translate3d(0,-3px,0);
  -ms-transform: translate3d(0,-3px,0);
  transform: translate3d(0,-3px,0);
  box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);
}

.emotion-3:active {
  background: #0032a8;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
  box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);
}

.emotion-3:focus {
  box-shadow: 0 0px 8px #0054ff,0 0px 8px #b0b7ff;
}

.emotion-3:hover {
  color: #ffffff;
  background: #ff0052;
}

.emotion-4 {
  position: relative;
  cursor: pointer;
  outline: none;
  margin: 0;
  padding: 16px;
  width: auto;
  text-align: center;
  display: inline-block;
  border: none;
  border-radius: 5px;
  background: #3b5bdb;
  color: #ffffff;
  font-size: 1rem;
  font-family: "IBM Plex Sans",Arial,Helvetica,sans-serif;
  line-height: inherit;
  font-weight: inherit;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
  -webkit-transition: 0.2s ease-in-out;
  transition: 0.2s ease-in-out;
  background: #008658;
  color: #ffffff;
}

.emotion-4:hover {
  background: #0054ff;
  -webkit-transform: translate3d(0,-3px,0);
  -ms-transform: translate3d(0,-3px,0);
  transform: translate3d(0,-3px,0);
  box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);
}

.emotion-4:active {
  background: #0032a8;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
  box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);
}

.emotion-4:focus {
  box-shadow: 0 0px 8px #0054ff,0 0px 8px #b0b7ff;
}

.emotion-4:hover {
  color: #ffffff;
  background: #009423;
}

.emotion-5 {
  position: relative;
  cursor: pointer;
  outline: none;
  margin: 0;
  padding: 16px;
  width: auto;
  text-align: center;
  display: inline-block;
  border: none;
  border-radius: 5px;
  background: #3b5bdb;
  color: #ffffff;
  font-size: 1rem;
  font-family: "IBM Plex Sans",Arial,Helvetica,sans-serif;
  line-height: inherit;
  font-weight: inherit;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
  -webkit-transition: 0.2s ease-in-out;
  transition: 0.2s ease-in-out;
  background: #C93700;
  color: #ffffff;
}

.emotion-5:hover {
  background: #0054ff;
  -webkit-transform: translate3d(0,-3px,0);
  -ms-transform: translate3d(0,-3px,0);
  transform: translate3d(0,-3px,0);
  box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);
}

.emotion-5:active {
  background: #0032a8;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
  box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);
}

.emotion-5:focus {
  box-shadow: 0 0px 8px #0054ff,0 0px 8px #b0b7ff;
}

.emotion-5:hover {
  color: #ffffff;
  background: #ff0000;
}

.emotion-6 {
  position: relative;
  cursor: pointer;
  outline: none;
  margin: 0;
  padding: 16px;
  width: auto;
  text-align: center;
  display: inline-block;
  border: none;
  border-radius: 5px;
  background: #3b5bdb;
  color: #ffffff;
  font-size: 1rem;
  font-family: "IBM Plex Sans",Arial,Helvetica,sans-serif;
  line-height: inherit;
  font-weight: inherit;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
  -webkit-transition: 0.2s ease-in-out;
  transition: 0.2s ease-in-out;
  background: #e03131;
  color: #ffffff;
}

.emotion-6:hover {
  background: #0054ff;
  -webkit-transform: translate3d(0,-3px,0);
  -ms-transform: translate3d(0,-3px,0);
  transform: translate3d(0,-3px,0);
  box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);
}

.emotion-6:active {
  background: #0032a8;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
  box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);
}

.emotion-6:focus {
  box-shadow: 0 0px 8px #0054ff,0 0px 8px #b0b7ff;
}

.emotion-6:hover {
  color: #ffffff;
  background: #ff0000;
}

.emotion-7 {
  position: relative;
  cursor: pointer;
  outline: none;
  margin: 0;
  padding: 16px;
  width: auto;
  text-align: center;
  display: inline-block;
  border: none;
  border-radius: 5px;
  background: #3b5bdb;
  color: #ffffff;
  font-size: 1rem;
  font-family: "IBM Plex Sans",Arial,Helvetica,sans-serif;
  line-height: inherit;
  font-weight: inherit;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
  -webkit-transition: 0.2s ease-in-out;
  transition: 0.2s ease-in-out;
  background: #00788C;
  color: #ffffff;
}

.emotion-7:hover {
  background: #0054ff;
  -webkit-transform: translate3d(0,-3px,0);
  -ms-transform: translate3d(0,-3px,0);
  transform: translate3d(0,-3px,0);
  box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);
}

.emotion-7:active {
  background: #0032a8;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
  box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);
}

.emotion-7:focus {
  box-shadow: 0 0px 8px #0054ff,0 0px 8px #b0b7ff;
}

.emotion-7:hover {
  color: #ffffff;
  background: #008cdf;
}

.emotion-8 {
  position: relative;
  cursor: pointer;
  outline: none;
  margin: 0;
  padding: 16px;
  width: auto;
  text-align: center;
  display: inline-block;
  border: none;
  border-radius: 5px;
  background: #3b5bdb;
  color: #ffffff;
  font-size: 1rem;
  font-family: "IBM Plex Sans",Arial,Helvetica,sans-serif;
  line-height: inherit;
  font-weight: inherit;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
  -webkit-transition: 0.2s ease-in-out;
  transition: 0.2s ease-in-out;
  background: #dee2e6;
  color: #212529;
}

.emotion-8:hover {
  background: #0054ff;
  -webkit-transform: translate3d(0,-3px,0);
  -ms-transform: translate3d(0,-3px,0);
  transform: translate3d(0,-3px,0);
  box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);
}

.emotion-8:active {
  background: #0032a8;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
  box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);
}

.emotion-8:focus {
  box-shadow: 0 0px 8px #0054ff,0 0px 8px #b0b7ff;
}

.emotion-8:hover {
  color: #dee2e6;
  background: #495057;
}

.emotion-9 {
  position: relative;
  cursor: pointer;
  outline: none;
  margin: 0;
  padding: 16px;
  width: auto;
  text-align: center;
  display: inline-block;
  border: none;
  border-radius: 5px;
  background: #3b5bdb;
  color: #ffffff;
  font-size: 1rem;
  font-family: "IBM Plex Sans",Arial,Helvetica,sans-serif;
  line-height: inherit;
  font-weight: inherit;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
  -webkit-transition: 0.2s ease-in-out;
  transition: 0.2s ease-in-out;
  padding: 8px;
  background: #3b5bdb;
  color: #ffffff;
}

.emotion-9:hover {
  background: #0054ff;
  -webkit-transform: translate3d(0,-3px,0);
  -ms-transform: translate3d(0,-3px,0);
  transform: translate3d(0,-3px,0);
  box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);
}

.emotion-9:active {
  background: #0032a8;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
  box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);
}

.emotion-9:focus {
  box-shadow: 0 0px 8px #0054ff,0 0px 8px #b0b7ff;
}

.emotion-9:hover {
  color: #ffffff;
  background: #0054ff;
}

.emotion-11 {
  position: relative;
  cursor: pointer;
  outline: none;
  margin: 0;
  padding: 16px;
  width: auto;
  text-align: center;
  display: inline-block;
  border: none;
  border-radius: 5px;
  background: orange;
  color: #212529;
  font-size: 1rem;
  font-family: "IBM Plex Sans",Arial,Helvetica,sans-serif;
  line-height: inherit;
  font-weight: inherit;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
  -webkit-transition: 0.2s ease-in-out;
  transition: 0.2s ease-in-out;
  background: orange;
  color: #212529;
}

.emotion-11:hover {
  background: #0054ff;
  -webkit-transform: translate3d(0,-3px,0);
  -ms-transform: translate3d(0,-3px,0);
  transform: translate3d(0,-3px,0);
  box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);
}

.emotion-11:active {
  background: #0032a8;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
  box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);
}

.emotion-11:focus {
  box-shadow: 0 0px 8px #0054ff,0 0px 8px #b0b7ff;
}

.emotion-11:hover {
  color: #212529;
  background: #0054ff;
}

.emotion-11:hover,
.emotion-11:focus {
  background: #ff9c61;
}

.emotion-11:active {
  background: #fd9d91;
}

<body>
    <div>
      <div
        class="emotion-13"
      >
        <div
          class="emotion-1"
        >
          <button
            class="emotion-0"
            data-testid=""
            id=""
            type="button"
          >
            <span>
              Show 
              dark
               mode
            </span>
          </button>
        </div>
        <section
          class="emotion-12"
        >
          <button
            class="emotion-2"
            data-testid=""
            id=""
            type="button"
          >
            <span>
              Default Button
            </span>
          </button>
          <button
            class="emotion-3"
            data-testid=""
            id=""
            type="button"
          >
            <span>
              Secondary Button
            </span>
          </button>
          <button
            class="emotion-4"
            data-testid=""
            id=""
            type="button"
          >
            <span>
              Accent1 Button
            </span>
          </button>
          <button
            class="emotion-5"
            data-testid=""
            id=""
            type="button"
          >
            <span>
              Accent2 Button
            </span>
          </button>
          <button
            class="emotion-6"
            data-testid=""
            id=""
            type="button"
          >
            <span>
              Accent3 Button
            </span>
          </button>
          <button
            class="emotion-7"
            data-testid=""
            id=""
            type="button"
          >
            <span>
              Accent4 Button
            </span>
          </button>
          <button
            class="emotion-8"
            data-testid=""
            id=""
            type="button"
          >
            <span>
              Gray Button
            </span>
          </button>
          <button
            class="emotion-9"
            data-testid=""
            id=""
            type="button"
          >
            <span>
              Medium Button
            </span>
          </button>
          <button
            class="emotion-0"
            data-testid=""
            id=""
            type="button"
          >
            <span>
              Small Button
            </span>
          </button>
          <button
            class="emotion-11"
            data-testid=""
            id=""
            type="button"
          >
            <span>
              Custom theme button
            </span>
          </button>
        </section>
      </div>
    </div>
  </body>,
  "container": .emotion-13 {
  display: grid;
  grid-template-columns: 1fr 3fr 1fr;
  grid-template-rows: auto 1fr 1fr;
  grid-template-areas: 'header header header' '. buttons .' '. . .';
  background: #ffffff;
  color: #212529;
  width: 100%;
  height: 100%;
  -webkit-transition: 0.2s ease;
  transition: 0.2s ease;
}

.emotion-13 section {
  position: relative;
}

.emotion-13 h2 {
  position: absolute;
  top: 0px;
  left: 0;
  text-transform: uppercase;
}

.emotion-1 {
  grid-area: header;
  padding: 30px;
  border-bottom: 1px solid currentColor;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.emotion-1 > div {
  margin-top: 0;
}

.emotion-1 > div button {
  margin: 0 4px;
}

.emotion-0 {
  position: relative;
  cursor: pointer;
  outline: none;
  margin: 0;
  padding: 16px;
  width: auto;
  text-align: center;
  display: inline-block;
  border: none;
  border-radius: 5px;
  background: #3b5bdb;
  color: #ffffff;
  font-size: 1rem;
  font-family: "IBM Plex Sans",Arial,Helvetica,sans-serif;
  line-height: inherit;
  font-weight: inherit;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
  -webkit-transition: 0.2s ease-in-out;
  transition: 0.2s ease-in-out;
  padding: 4px 8px;
  font-size: 0.875rempx;
  background: #3b5bdb;
  color: #ffffff;
}

.emotion-0:hover {
  background: #0054ff;
  -webkit-transform: translate3d(0,-3px,0);
  -ms-transform: translate3d(0,-3px,0);
  transform: translate3d(0,-3px,0);
  box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);
}

.emotion-0:active {
  background: #0032a8;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
  box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);
}

.emotion-0:focus {
  box-shadow: 0 0px 8px #0054ff,0 0px 8px #b0b7ff;
}

.emotion-0:hover {
  color: #ffffff;
  background: #0054ff;
}

.emotion-12 {
  grid-area: buttons;
  padding: 30px;
  border-bottom: 1px solid currentColor;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: space-evenly;
  -webkit-justify-content: space-evenly;
  -ms-flex-pack: space-evenly;
  justify-content: space-evenly;
}

.emotion-12 > button {
  -webkit-flex: 0 1 calc(50% - 20px);
  -ms-flex: 0 1 calc(50% - 20px);
  flex: 0 1 calc(50% - 20px);
  margin-top: 20px;
}

.emotion-2 {
  position: relative;
  cursor: pointer;
  outline: none;
  margin: 0;
  padding: 16px;
  width: auto;
  text-align: center;
  display: inline-block;
  border: none;
  border-radius: 5px;
  background: #3b5bdb;
  color: #ffffff;
  font-size: 1rem;
  font-family: "IBM Plex Sans",Arial,Helvetica,sans-serif;
  line-height: inherit;
  font-weight: inherit;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
  -webkit-transition: 0.2s ease-in-out;
  transition: 0.2s ease-in-out;
  background: #3b5bdb;
  color: #ffffff;
}

.emotion-2:hover {
  background: #0054ff;
  -webkit-transform: translate3d(0,-3px,0);
  -ms-transform: translate3d(0,-3px,0);
  transform: translate3d(0,-3px,0);
  box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);
}

.emotion-2:active {
  background: #0032a8;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
  box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);
}

.emotion-2:focus {
  box-shadow: 0 0px 8px #0054ff,0 0px 8px #b0b7ff;
}

.emotion-2:hover {
  color: #ffffff;
  background: #0054ff;
}

.emotion-3 {
  position: relative;
  cursor: pointer;
  outline: none;
  margin: 0;
  padding: 16px;
  width: auto;
  text-align: center;
  display: inline-block;
  border: none;
  border-radius: 5px;
  background: #3b5bdb;
  color: #ffffff;
  font-size: 1rem;
  font-family: "IBM Plex Sans",Arial,Helvetica,sans-serif;
  line-height: inherit;
  font-weight: inherit;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
  -webkit-transition: 0.2s ease-in-out;
  transition: 0.2s ease-in-out;
  background: #C2255C;
  color: #ffffff;
}

.emotion-3:hover {
  background: #0054ff;
  -webkit-transform: translate3d(0,-3px,0);
  -ms-transform: translate3d(0,-3px,0);
  transform: translate3d(0,-3px,0);
  box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);
}

.emotion-3:active {
  background: #0032a8;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
  box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);
}

.emotion-3:focus {
  box-shadow: 0 0px 8px #0054ff,0 0px 8px #b0b7ff;
}

.emotion-3:hover {
  color: #ffffff;
  background: #ff0052;
}

.emotion-4 {
  position: relative;
  cursor: pointer;
  outline: none;
  margin: 0;
  padding: 16px;
  width: auto;
  text-align: center;
  display: inline-block;
  border: none;
  border-radius: 5px;
  background: #3b5bdb;
  color: #ffffff;
  font-size: 1rem;
  font-family: "IBM Plex Sans",Arial,Helvetica,sans-serif;
  line-height: inherit;
  font-weight: inherit;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
  -webkit-transition: 0.2s ease-in-out;
  transition: 0.2s ease-in-out;
  background: #008658;
  color: #ffffff;
}

.emotion-4:hover {
  background: #0054ff;
  -webkit-transform: translate3d(0,-3px,0);
  -ms-transform: translate3d(0,-3px,0);
  transform: translate3d(0,-3px,0);
  box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);
}

.emotion-4:active {
  background: #0032a8;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
  box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);
}

.emotion-4:focus {
  box-shadow: 0 0px 8px #0054ff,0 0px 8px #b0b7ff;
}

.emotion-4:hover {
  color: #ffffff;
  background: #009423;
}

.emotion-5 {
  position: relative;
  cursor: pointer;
  outline: none;
  margin: 0;
  padding: 16px;
  width: auto;
  text-align: center;
  display: inline-block;
  border: none;
  border-radius: 5px;
  background: #3b5bdb;
  color: #ffffff;
  font-size: 1rem;
  font-family: "IBM Plex Sans",Arial,Helvetica,sans-serif;
  line-height: inherit;
  font-weight: inherit;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
  -webkit-transition: 0.2s ease-in-out;
  transition: 0.2s ease-in-out;
  background: #C93700;
  color: #ffffff;
}

.emotion-5:hover {
  background: #0054ff;
  -webkit-transform: translate3d(0,-3px,0);
  -ms-transform: translate3d(0,-3px,0);
  transform: translate3d(0,-3px,0);
  box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);
}

.emotion-5:active {
  background: #0032a8;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
  box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);
}

.emotion-5:focus {
  box-shadow: 0 0px 8px #0054ff,0 0px 8px #b0b7ff;
}

.emotion-5:hover {
  color: #ffffff;
  background: #ff0000;
}

.emotion-6 {
  position: relative;
  cursor: pointer;
  outline: none;
  margin: 0;
  padding: 16px;
  width: auto;
  text-align: center;
  display: inline-block;
  border: none;
  border-radius: 5px;
  background: #3b5bdb;
  color: #ffffff;
  font-size: 1rem;
  font-family: "IBM Plex Sans",Arial,Helvetica,sans-serif;
  line-height: inherit;
  font-weight: inherit;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
  -webkit-transition: 0.2s ease-in-out;
  transition: 0.2s ease-in-out;
  background: #e03131;
  color: #ffffff;
}

.emotion-6:hover {
  background: #0054ff;
  -webkit-transform: translate3d(0,-3px,0);
  -ms-transform: translate3d(0,-3px,0);
  transform: translate3d(0,-3px,0);
  box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);
}

.emotion-6:active {
  background: #0032a8;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
  box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);
}

.emotion-6:focus {
  box-shadow: 0 0px 8px #0054ff,0 0px 8px #b0b7ff;
}

.emotion-6:hover {
  color: #ffffff;
  background: #ff0000;
}

.emotion-7 {
  position: relative;
  cursor: pointer;
  outline: none;
  margin: 0;
  padding: 16px;
  width: auto;
  text-align: center;
  display: inline-block;
  border: none;
  border-radius: 5px;
  background: #3b5bdb;
  color: #ffffff;
  font-size: 1rem;
  font-family: "IBM Plex Sans",Arial,Helvetica,sans-serif;
  line-height: inherit;
  font-weight: inherit;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
  -webkit-transition: 0.2s ease-in-out;
  transition: 0.2s ease-in-out;
  background: #00788C;
  color: #ffffff;
}

.emotion-7:hover {
  background: #0054ff;
  -webkit-transform: translate3d(0,-3px,0);
  -ms-transform: translate3d(0,-3px,0);
  transform: translate3d(0,-3px,0);
  box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);
}

.emotion-7:active {
  background: #0032a8;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
  box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);
}

.emotion-7:focus {
  box-shadow: 0 0px 8px #0054ff,0 0px 8px #b0b7ff;
}

.emotion-7:hover {
  color: #ffffff;
  background: #008cdf;
}

.emotion-8 {
  position: relative;
  cursor: pointer;
  outline: none;
  margin: 0;
  padding: 16px;
  width: auto;
  text-align: center;
  display: inline-block;
  border: none;
  border-radius: 5px;
  background: #3b5bdb;
  color: #ffffff;
  font-size: 1rem;
  font-family: "IBM Plex Sans",Arial,Helvetica,sans-serif;
  line-height: inherit;
  font-weight: inherit;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
  -webkit-transition: 0.2s ease-in-out;
  transition: 0.2s ease-in-out;
  background: #dee2e6;
  color: #212529;
}

.emotion-8:hover {
  background: #0054ff;
  -webkit-transform: translate3d(0,-3px,0);
  -ms-transform: translate3d(0,-3px,0);
  transform: translate3d(0,-3px,0);
  box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);
}

.emotion-8:active {
  background: #0032a8;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
  box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);
}

.emotion-8:focus {
  box-shadow: 0 0px 8px #0054ff,0 0px 8px #b0b7ff;
}

.emotion-8:hover {
  color: #dee2e6;
  background: #495057;
}

.emotion-9 {
  position: relative;
  cursor: pointer;
  outline: none;
  margin: 0;
  padding: 16px;
  width: auto;
  text-align: center;
  display: inline-block;
  border: none;
  border-radius: 5px;
  background: #3b5bdb;
  color: #ffffff;
  font-size: 1rem;
  font-family: "IBM Plex Sans",Arial,Helvetica,sans-serif;
  line-height: inherit;
  font-weight: inherit;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
  -webkit-transition: 0.2s ease-in-out;
  transition: 0.2s ease-in-out;
  padding: 8px;
  background: #3b5bdb;
  color: #ffffff;
}

.emotion-9:hover {
  background: #0054ff;
  -webkit-transform: translate3d(0,-3px,0);
  -ms-transform: translate3d(0,-3px,0);
  transform: translate3d(0,-3px,0);
  box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);
}

.emotion-9:active {
  background: #0032a8;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
  box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);
}

.emotion-9:focus {
  box-shadow: 0 0px 8px #0054ff,0 0px 8px #b0b7ff;
}

.emotion-9:hover {
  color: #ffffff;
  background: #0054ff;
}

.emotion-11 {
  position: relative;
  cursor: pointer;
  outline: none;
  margin: 0;
  padding: 16px;
  width: auto;
  text-align: center;
  display: inline-block;
  border: none;
  border-radius: 5px;
  background: orange;
  color: #212529;
  font-size: 1rem;
  font-family: "IBM Plex Sans",Arial,Helvetica,sans-serif;
  line-height: inherit;
  font-weight: inherit;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
  -webkit-transition: 0.2s ease-in-out;
  transition: 0.2s ease-in-out;
  background: orange;
  color: #212529;
}

.emotion-11:hover {
  background: #0054ff;
  -webkit-transform: translate3d(0,-3px,0);
  -ms-transform: translate3d(0,-3px,0);
  transform: translate3d(0,-3px,0);
  box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);
}

.emotion-11:active {
  background: #0032a8;
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
  box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);
}

.emotion-11:focus {
  box-shadow: 0 0px 8px #0054ff,0 0px 8px #b0b7ff;
}

.emotion-11:hover {
  color: #212529;
  background: #0054ff;
}

.emotion-11:hover,
.emotion-11:focus {
  background: #ff9c61;
}

.emotion-11:active {
  background: #fd9d91;
}

<div>
    <div
      class="emotion-13"
    >
      <div
        class="emotion-1"
      >
        <button
          class="emotion-0"
          data-testid=""
          id=""
          type="button"
        >
          <span>
            Show 
            dark
             mode
          </span>
        </button>
      </div>
      <section
        class="emotion-12"
      >
        <button
          class="emotion-2"
          data-testid=""
          id=""
          type="button"
        >
          <span>
            Default Button
          </span>
        </button>
        <button
          class="emotion-3"
          data-testid=""
          id=""
          type="button"
        >
          <span>
            Secondary Button
          </span>
        </button>
        <button
          class="emotion-4"
          data-testid=""
          id=""
          type="button"
        >
          <span>
            Accent1 Button
          </span>
        </button>
        <button
          class="emotion-5"
          data-testid=""
          id=""
          type="button"
        >
          <span>
            Accent2 Button
          </span>
        </button>
        <button
          class="emotion-6"
          data-testid=""
          id=""
          type="button"
        >
          <span>
            Accent3 Button
          </span>
        </button>
        <button
          class="emotion-7"
          data-testid=""
          id=""
          type="button"
        >
          <span>
            Accent4 Button
          </span>
        </button>
        <button
          class="emotion-8"
          data-testid=""
          id=""
          type="button"
        >
          <span>
            Gray Button
          </span>
        </button>
        <button
          class="emotion-9"
          data-testid=""
          id=""
          type="button"
        >
          <span>
            Medium Button
          </span>
        </button>
        <button
          class="emotion-0"
          data-testid=""
          id=""
          type="button"
        >
          <span>
            Small Button
          </span>
        </button>
        <button
          class="emotion-11"
          data-testid=""
          id=""
          type="button"
        >
          <span>
            Custom theme button
          </span>
        </button>
      </section>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
